infra/servicemesh/istio/infra/step-4/circuitbreaker/2-demo/order-service-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order-service
spec:
  host: order-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
        outlierDetection:
           consecutive5xxErrors: 2
           interval: 10s
           baseEjectionTime: 1m
           maxEjectionPercent: 100
  - name: v2
    labels:
      version: v2
